--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -53,3 +53,26 @@ input:checked + .slider:before {
   box-shadow: 0 -0.5rem 1rem rgba(0 0 0 / 0.15);
   border-radius: 4px;
 }
+
+#itemdb-upload-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px;
+  background-color: #f8f9fa;
+  border: 1px solid #dee2e6;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+  border: 3px dashed rgb(0, 0, 0);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+}
+#itemdb-upload-button:hover {
+  background-color: #e9ecef;
+}
